
set(CFG_SCHEMA_VER 3.0)
set(DEF_SCHEMA_VER 3.1)
set(XML_SCHEMA_VER 1999)

set(JCCL_SCHEMA_DIR www.vrjuggler.org/jccl/xsd)
set(W3_SCHEMA_DIR www.w3.org)

set(SCHEMA_ROOT_DIR ${JCCL_SHARE_DIR}/data/schema)

install(FILES configuration.xsd
	COMPONENT jccl-runtime
	DESTINATION ${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${CFG_SCHEMA_VER})
install(FILES definition.xsd
	COMPONENT jccl-runtime
	DESTINATION ${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${DEF_SCHEMA_VER})
install(DIRECTORY stdschemas/${W3_SCHEMA_DIR}/${XML_SCHEMA_VER}/
	COMPONENT jccl-runtime
	DESTINATION ${SCHEMA_ROOT_DIR}/${W3_SCHEMA_DIR}/${XML_SCHEMA_VER})


file(MAKE_DIRECTORY "${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${CFG_SCHEMA_VER}")
file(MAKE_DIRECTORY "${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${DEF_SCHEMA_VER}")
file(MAKE_DIRECTORY "${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${W3_SCHEMA_DIR}/${XML_SCHEMA_VER}")

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/configuration.xsd"
	"${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${CFG_SCHEMA_VER}/configuration.xsd"
	COPYONLY)
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/definition.xsd"
	"${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${JCCL_SCHEMA_DIR}/${DEF_SCHEMA_VER}/definition.xsd"
	COPYONLY)

foreach(fn part2.dtd XMLSchema.dtd XMLSchema.xsd)
	configure_file("${CMAKE_CURRENT_SOURCE_DIR}/stdschemas/${W3_SCHEMA_DIR}/${XML_SCHEMA_VER}/${fn}"
		"${SHARE_OUTPUT_DIRECTORY}/../${SCHEMA_ROOT_DIR}/${W3_SCHEMA_DIR}/${XML_SCHEMA_VER}/${fn}" COPYONLY)
endforeach()
